--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,10 @@
 .App {
-  text-align: center;
+  transition: background-color 0.5s ease;
+}
+
+.Quote {
+  transition: color 0.5s ease;
+  text-shadow: 1px 1px 1px #000000;
 }
 
 .App-logo {
