--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,21 @@
+/* Fade in text */
+.fade-in-text {
+  animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+/* Styles */
 .App {
   transition: background-color 0.5s ease;
 }
 
 .Quote {
   transition: color 0.5s ease;
-  text-shadow: 1px 1px 1px #000000;
+  /*text-shadow: 1px 1px 1px #000000; */
 }
 
 .App-logo {
