--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,20 @@
-/* Fade in text */
-.fade-in-text {
-  animation: fadeIn 5s;
-}
+/* Fade text */
 
-@keyframes fadeIn {
-  0% { opacity: 0; }
-  100% { opacity: 1; }
+/* 	Transition_delay = 2 sec
+	Fadeout_delay = Transition_delay / 2 
+*/
+
+.TextBox{
+	opacity: 1.0;
+	transition: opacity 1s ease; 
 }
 
 /* Styles */
 .App {
-  transition: background-color 0.5s ease;
+  transition: background-color 2s ease;
 }
 
 .Quote {
-  transition: color 0.5s ease;
-  /*text-shadow: 1px 1px 1px #000000; */
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  transition: color 2s ease;
+  text-shadow: 1px 1px 1px #000000;
 }
