--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
 	Fadeout_delay = Transition_delay / 2 
 */
 
+.mainBox {
+	width: 100%;
+	max-width: 700px;
+}
+
 .TextBox{
 	opacity: 1.0;
 	transition: opacity 1s ease; 
@@ -12,9 +17,10 @@
 /* Styles */
 .App {
   transition: background-color 2s ease;
+  height: 100%;
 }
 
-.Quote {
+.Quote, .Author {
   transition: color 2s ease;
-  text-shadow: 1px 1px 1px #000000;
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 1) !important;
 }
